# SwarmMind

./: .CLAUDE.md  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  README_zh.md  SECURITY.md  alembic.ini  pyproject.toml  requirements.txt  skills-lock.json  typos.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge-owner.yml  ci-practical.yml  ci-strict.yml  ci.yml  pr-branch-check.yml
.gstack/: browse.json
alembic/: env.py
alembic/versions/: 09cafc3a6469_baseline_schema.py  1a3eb1e28e8d_initial_orm_migration.py  363a02897c48_make_run_conversation_id_nullable.py  5d7f6c8e9a10_add_artifact_file_fields.py  781d386409d0_add_project_id_to_artifacts.py  8c4f96c8f27a_add_tool_fields_to_messages.py  8f27dafa0bbc_add_project_conversation_id.py  a1b2c3d4e5f6_phase_c_conversation_project_fields.py  ac3d6a9204b0_add_promoted_project_id_and_run_id.py  b1c2d3e4f5a6_task_step_columns.py  c1d2e3f4a5b6_project_memberships.py  cc8de8a23de8_add_run_task_author_role_to_artifacts.py  d2e3f4a5b6c7_users_and_tokens.py  dcebeeadaefe_add_llm_providers_and_provider_models.py  e1f0a2b3c4d5_add_fallback_model_names_to_llm_provider_models.py  e4e591a43be1_add_projects_table.py  ef1237b05060_add_agent_team_templates_and_project_.py  f5c8a2d1e3b4_add_supports_thinking_to_runtime_models.py  g6d9b3e2f4c5_add_artifacts_table.py  h7e0c4f3g5d6_add_runs_table.py  i8f1d5g4h6e7_add_tasks_table.py  j9g2e6h5i7k8_add_approval_requests_and_audit_logs.py  k0h3f7i8l9m0_add_phase_and_risk_level_to_projects.py
docs/: README.md  agent-action-roadmap.md  api-deviation-report-2026-04-26.md  architecture.md  chat-mainline-execution-plan.md  chat-session-and-project-collaboration-ui-architecture.md  chat-ui-gap-analysis.md  cli.md  connector-design.md  layered-memory-architecture.md  multi-llm-provider-design.md  product-positioning.md  roadmap.md  technical-debt-repayment-plan.md  temporary-chat-mode-plan.md  ui-migration-plan.md
docs/archive/: README_v1_vision.md  chat-ui-gap-analysis.md  ui-migration-plan.md
docs/ui/: 01-navigation-and-principles.md  02-page-map-and-flows.md  10-workbench-and-chat.md  20-skill-center.md  30-projects-and-project-space.md  40-approval-center.md  60-knowledge-library-schedules.md  README.md
scripts/: generate_mock_snapshot.py  verify_temporary_chat_flow.py
swarmmind/: __init__.py  config.py  context_broker.py  db.py  db_models.py  layered_memory.py  llm.py  models.py  renderer.py  shared_memory.py  time_utils.py
swarmmind/agents/: __init__.py  base.py  code_review.py  finance.py  general_agent.py
swarmmind/agents/middlewares/: __init__.py  capability_guard_middleware.py  clarification_middleware.py
swarmmind/api/: __init__.py  chat_routes.py  conversation_routes.py  llm_gateway_routes.py  llm_provider_routes.py  supervisor.py
swarmmind/api/routers/: __init__.py  agent_teams.py  approvals.py  audit_logs.py  connectors.py  legacy_supervisor.py  mappers.py  memory.py  project_memberships.py  projects.py  promotions.py  runs.py  runtime_models.py  system.py  users.py
swarmmind/cli/: __init__.py  __main__.py  client.py  config.py  mcp_server.py  output.py
swarmmind/cli/commands/: _common.py  approval.py  audit.py  auth.py  connector.py  conversation.py  mcp.py  member.py  memory.py  project.py  run.py  system.py  task.py  user.py
swarmmind/connectors/: __init__.py  base.py  config_validation.py  registry.py
swarmmind/connectors/feishu/: __init__.py  (+5 more)
swarmmind/llm_gateway/: __init__.py  models.py  router.py
swarmmind/repositories/: __init__.py  action_proposal.py  agent.py  agent_team.py  approval_request.py  artifact.py  audit_log.py  connector.py  conversation.py  event_log.py  llm_provider.py  memory.py  message.py  project.py  project_membership.py  project_team.py  run.py  runtime_catalog.py  strategy.py  task.py  user.py  working_memory.py
swarmmind/runtime/: __init__.py  bootstrap.py  catalog.py  errors.py  models.py  profile.py
swarmmind/services/: artifact_content.py  audit_writer.py  auth.py  conversation_execution.py  conversation_support.py  conversation_trace_service.py  gateway_key.py  lifecycle.py  message_trace_service.py  risk_policy.py  run_context.py  run_lifecycle.py  run_suspension.py  runtime_bridge.py  runtime_event_processing.py  runtime_support.py  stream_events.py  task_emitter.py  trace_checkpoint_storage.py  trace_provider.py  trace_service.py
swarmmind/utils/: crypto.py
tests/: conftest.py  test_action_proposal_repository.py  test_agent_team_api.py  test_agent_team_repository.py  test_approval_request_api.py  test_approval_request_repository.py  test_artifact_api.py  test_artifact_repository.py  test_audit_log_api.py  test_audit_log_repository.py  test_audit_writer.py  test_base_agent.py  test_capability_guard_middleware.py  test_clarification_middleware.py  test_clarification_persistence.py  test_cli_client.py  test_cli_commands.py  test_connector_registry.py  test_conversation_detail.py  test_conversation_recent.py  test_conversation_stream.py  test_conversation_support.py  test_conversation_titles.py  test_conversation_trace_service.py  test_db_config.py  test_dispatch.py  test_general_agent_prompt.py  test_general_agent_stream_bridge.py  test_general_agent_stream_events.py  test_layered_memory.py  test_lifecycle_service.py  test_llm_gateway_api.py  test_llm_provider_api.py  test_llm_provider_repository.py  test_memory_api.py  test_memory_repository.py  test_message_trace_service.py  test_project_api.py  test_project_execution_api.py  test_project_membership_api.py  (+23 more)
tests/e2e/: generate_reports.py  run_e2e_qa.py  run_ultra_only.py
tests/snapshots/: ultra_restaurant_agent_team.meta.json  ultra_restaurant_agent_team.ndjson
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/e2e/: chat-flow.spec.ts  playwright.config.ts
ui/src/: App.tsx  env.ts  index.css
(+89 files in other folders)
