[project]
name = "swarmmind"
version = "0.1.0"
description = "AI Agent Team Operating System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.2",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.82.6",
    "deerflow-harness @ git+https://github.com/bytedance/deer-flow@main#subdirectory=backend/packages/harness",
]

[tool.uv]
dev-dependencies = []
