[project]
name = "swarmmind"
version = "0.1.1"
description = "AI Agent Team Operating System"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.9.2",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "litellm>=1.82.6",
    "deerflow-harness @ git+https://github.com/hawkli-1994/deer-flow@main#subdirectory=backend/packages/harness",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pytest-cov>=5.0.0",
]

# ============================================
# Ruff - Python Linter & Formatter (Strict)
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # Pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
    # flake8-annotations
    "ANN",
    # flake8-bandit (security)
    "S",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-eradicate
    "ERA",
    # mccabe (complexity)
    "C90",
    # pep8-naming
    "N",
    # flake8-return
    "RET",
    # flake8-unused-arguments
    "ARG",
    # pylint
    "PL",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]
ignore = [
    # D104: Missing docstring in public package (too strict for __init__.py)
    "D104",
    # D107: Missing docstring in __init__ (too verbose for dataclasses)
    "D107",
    # ANN101: Missing type annotation for self
    "ANN101",
    # ANN102: Missing type annotation for cls
    "ANN102",
    # S101: Use of assert detected (pytest uses asserts)
    "S101",
    # RUF001/002/003: Ambiguous unicode character (Chinese project allows Chinese punctuation)
    "RUF001", "RUF002", "RUF003",
    # PLC0415: Import outside top-level (needed for lazy imports to avoid circular deps)
    "PLC0415",
    # ARG001/002: Unused arguments (common for API handlers and interfaces)
    "ARG001", "ARG002",
    # E501: Line too long (extended to 120 chars, remaining cases are acceptable)
    "E501",
    # UP042: Use StrEnum instead of str, Enum (str, Enum is valid in Python 3.12)
    "UP042",
    # S608: Possible SQL injection (using parameterized queries)
    "S608",
    # C901: Function too complex (legacy code, can be refactored later)
    "C901",
    # D205/D415: Docstring formatting issues (minor style issues)
    "D205", "D415",
    # ARG005: Unused lambda argument (common in callbacks)
    "ARG005",
    # ANN001/ANN201/ANN202: Missing type annotations (gradual typing)
    "ANN001", "ANN201", "ANN202",
    # N818: Exception name should end with Error (custom exception names are fine)
    "N818",
    # PLR2004: Magic value in comparison (common in config)
    "PLR2004",
    # E741: Ambiguous variable name (single letter variables in loops)
    "E741",
    # E402: Import not at top of file (needed for lazy imports)
    "E402",
    # ANN003: Missing type annotation for **kwargs
    "ANN003",
    # ANN002: Missing type annotation for *args
    "ANN002",
    # SIM102/SIM108: Use ternary operator (style preference)
    "SIM102", "SIM108",
    # PLR0911/0912/0915: Too many returns/branches/statements
    "PLR0911", "PLR0912", "PLR0915",
    # RUF012: Mutable class variables (Pydantic handles this)
    "RUF012",
    # RET504: Unnecessary assignment before return
    "RET504",
    # W291: Trailing whitespace (handled by formatter)
    "W291",
    # S110: try-except-pass (sometimes intentional)
    "S110",
    # B904: raise ... from (can be improved later)
    "B904",
    # UP028: Use yield from (can be refactored later)
    "UP028",
    # SIM105: Use contextlib.suppress (style preference)
    "SIM105",
    # RUF005: Use unpacking (style preference)
    "RUF005",
    # ANN401: Use of Any (needed for dynamic types)
    "ANN401",
    # S108: Use of /tmp (test file only)
    "S108",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
# Test files: allow missing docstrings, allow assert usage (handled above)
"tests/**/*.py" = ["D", "ANN", "PLR2004"]

# ============================================
# Mypy - Static Type Checker (Strict)
# ============================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
show_absolute_path = true

# ============================================
# Pytest & Coverage (Strict)
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=swarmmind",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=50",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_llm: marks tests that require LLM configuration (deselect with '-m \"not requires_llm\"')",
]

[tool.coverage.run]
source = ["swarmmind"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
fail_under = 50

# ============================================
# Bandit - Security Linter
# ============================================
[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert check (handled by pytest)
